--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,6 @@
 
 <% posts.forEach((post)=> { %>
 <h1><%= post.title %></h1>
-<p><%= post.content %></p>
+<p><%= post.content.substring(0,101) %> ... <a href="/posts/<%= post.title %>">Read More</a></p>
 
 <% }) %> <%- include("partials/footer"); -%>
